--- a/app/src/plugins/knx-settings.html
+++ b/app/src/plugins/knx-settings.html
@@ -14,21 +14,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
 <link rel="import" href="../homecon-web-socket-object.html">
 <link rel="import" href="../homecon-web-socket-sender.html">
 <link rel="import" href="../homecon-edit-dialog.html">
-<link rel="import" href="../homecon-section.html">
+
+<link rel="import" href="../../style/style-scrollbar.html">
 
 <dom-module id="knx-settings">
 
     <template>
 
-        <style include="iron-flex iron-flex-alignment">
+        <style include="iron-flex iron-flex-alignment style-scrollbar">
             :host {
                 display: block;
             }
-            paper-material.state{
+            paper-material{
                 padding-left: 16px;
                 padding-right: 16px;
                 padding-bottom: 4px;
@@ -36,16 +38,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 background-color: var(--secondary-background-color);
                 margin-bottom: 8px;
             }
-            .plugin {
+            .state {
                 cursor: pointer;
-                padding: 4px;
             }
         </style>
 
         <homecon-web-socket-sender id="websocket"></homecon-web-socket-sender>
 
         <template is="dom-repeat" items="{{states}}" as="state" filter="_filter">
-            <paper-material class="horizontal layout center plugin" on-tap="editDialog">
+            <paper-material class="horizontal layout center state" on-tap="editDialog">
                 <div class="flex name">
                     {{state.path}}
                 </div>
