--- a/app/src/plugins/plugins-settings.html
+++ b/app/src/plugins/plugins-settings.html
@@ -12,6 +12,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="../../bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html">
+
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 
@@ -28,13 +31,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             :host {
                 display: block;
             }
-            paper-material.state{
+            paper-material{
                 padding-left: 16px;
                 padding-right: 16px;
                 padding-bottom: 4px;
                 padding-top: 4px;
                 background-color: var(--secondary-background-color);
                 margin-bottom: 8px;
+            }
+            paper-dialog {
+                background-color: var(--dialog-background-color);
+            }
+            .name{
+                cursor: pointer;
             }
         </style>
 
@@ -43,8 +52,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         <template is="dom-repeat" items="{{pluginsList}}" as="plugin">
             <paper-material class="horizontal layout center plugin">
-                <div class="flex name">
-                    {{plugin.name}}
+                <div class="flex name" on-tap="infoDialog">
+                    {{_capitalize(plugin.name)}}
                 </div>
                 <paper-toggle-button checked="{{plugin.active}}" on-change="activeChanged">Active</paper-toggle-button>
             </paper-material>
@@ -52,6 +61,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         <paper-button raised noink="true" on-tap="addDialog">download plugin</paper-button>
 
+        <paper-dialog id="infoDialog" entry-animation="scale-up-animation" exit-animation="fade-out-animation" dynamic-align>
+            <paper-dialog-scrollable>
+                <h2>{{_capitalize(tempName)}}</h2>
+                <div>{{tempInfo}}</div>
+            </paper-dialog-scrollable>
+        </paper-dialog>
 
         <homecon-edit-dialog id="addDialog" on-save="add">
             Download plugin
@@ -66,6 +81,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             properties: {
             },
 
+            infoDialog: function(e){
+                var plugin = e.model.__data__.plugin;
+                this.tempName = plugin.name;
+                this.tempInfo = plugin.info;
+
+                this.$.infoDialog.open();
+            },
 
             addDialog: function(e){
 
@@ -80,7 +102,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 //this.$.websocket.send({'event':'','path':''});
         
             },
-
+        
             delete: function(e){
                 e.stopPropagation()
 
@@ -99,7 +121,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 else{
                     this.$.websocket.send({'event':'deactivate_plugin','plugin':plugin.name});
                 }
-            }
+            },
+
+            _capitalize: function(name){
+                return name[0].toUpperCase() + name.substring(1)
+            },
 
         });
     </script>
