--- a/app/style/style-scrollbar.html
+++ b/app/style/style-scrollbar.html
@@ -12,7 +12,7 @@
                 width: 6px;
             }
             ::-webkit-scrollbar-thumb {
-                /*background-color: lightgrey; //fallback*/
+                background-color: black; //fallback
                 background-color: rgba(0, 0, 0, 0.75);
             }
 
