--- a/app/src/homecon-app.html
+++ b/app/src/homecon-app.html
@@ -34,6 +34,7 @@
                 --dialog-background-color: #060606;
                 --primary-background-color: #080808;
                 --secondary-background-color: #0b0b0b;
+                --tertiary-background-color: #0f0f0f;
 
                 --primary-text-color: #ffffff;
                 --secondary-text-color: #aaaaaa;
