--- a/app/src/homecon-edit-dialog.html
+++ b/app/src/homecon-edit-dialog.html
@@ -8,10 +8,11 @@
 <link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
 <link rel="import" href="../bower_components/neon-animation/animations/fade-out-animation.html">
 
+<link rel="import" href="../style/style-scrollbar.html">
 
 <dom-module is="homecon-edit-dialog">
     <template>
-        <style include="iron-flex iron-flex-alignment">
+        <style include="iron-flex iron-flex-alignment style-scrollbar">
             :host{
             }
             paper-dialog {
@@ -21,13 +22,13 @@
         
         <paper-dialog id="dialog" entry-animation="scale-up-animation" exit-animation="fade-out-animation" dynamic-align>
             <paper-dialog-scrollable>
-            <form id="form" is="iron-form" on-iron-form-submit="save" action="/">
-                <content></content>
-                <div class="horizontal layout">
-                    <paper-button raised on-tap="formSubmit">save</paper-button>
-                    <paper-button raised on-tap="close">cancel</paper-button>
-                </div>
-            </form>
+                <form id="form" is="iron-form" on-iron-form-submit="save" action="/">
+                    <content></content>
+                    <div class="horizontal layout">
+                        <paper-button raised on-tap="formSubmit">save</paper-button>
+                        <paper-button raised on-tap="close">cancel</paper-button>
+                    </div>
+                </form>
             </paper-dialog-scrollable>
         </paper-dialog>
 
