updated knx settings and component and states list

--- a/app/src/homecon-app.html
+++ b/app/src/homecon-app.html
@@ -290,7 +290,7 @@
 
         _editChanged: function(edit){
             if(edit){
-                this.$.settings.load();
+                this._load();
             }
         },
 
