--- a/app/src/plugins/systemidentification-settings.html
+++ b/app/src/plugins/systemidentification-settings.html
@@ -66,7 +66,7 @@
     <script>
         Polymer({
             is: 'systemidentification-settings',
-            behaviors: [HighchartsBehavior],
+            behaviors: [highchartsBehavior],
             properties: {
             },
 
