--- a/app/src/widgets/highcharts-behavior.html
+++ b/app/src/widgets/highcharts-behavior.html
@@ -1,7 +1,7 @@
 <script src="../../bower_components/highcharts/highcharts.js"></script>
 
 <script>
-    HighchartsBehavior = {
+    highchartsBehavior = {
 
         _setXLabel: function(chart,label){
             chart.xAxis[0].axisTitle.attr({
