--- a/app/src/widgets/homecon-widget-chart.html
+++ b/app/src/widgets/homecon-widget-chart.html
@@ -56,7 +56,7 @@
     <script>
         Polymer({
             is: 'homecon-widget-chart',
-            behaviors: [HighchartsBehavior],
+            behaviors: [highchartsBehavior],
             properties: {
                 config: {
                     type: 'Object',
