--- a/app/src/plugins/knx-settings.html
+++ b/app/src/plugins/knx-settings.html
@@ -16,6 +16,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
+<link rel="import" href="../config-utils-behavior.html">
 <link rel="import" href="../homecon-web-socket-object.html">
 <link rel="import" href="../homecon-web-socket-sender.html">
 <link rel="import" href="../homecon-edit-dialog.html">
@@ -30,6 +31,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             :host {
                 display: block;
             }
+            .address{
+                width: 200px;
+                margin-right: 20px;
+            }
+            .port{
+                width: 80px;
+            }
             paper-material{
                 padding-left: 16px;
                 padding-right: 16px;
@@ -41,8 +49,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             .state {
                 cursor: pointer;
             }
-            h2 {
-                font-size: 14px;
+            h2{
+                font-size: 16px;
+                margin-bottom: 0px;
+            }
+            homecon-edit-dialog h2{
+                margin-bottom: 0px;
             }
         </style>
 
@@ -52,22 +64,45 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <homecon-web-socket-object auto event="state" path="knx/settings/interface/port" data="{{interfaceport}}" debounce="800"></homecon-web-socket-object>
 
         <h2>Interface settings:</h2>
-        <div class="horizontal layout">
-            <paper-input label="Interface ip address" value="{{interfaceip}}" class="flex-4"></paper-input>
-            <paper-input label="Interface port" value="{{interfaceport}}" class="flex-1"></paper-input>
+        <div class="horizontal layout wrap">
+            <paper-input label="Interface ip address" value="{{interfaceip}}" class="address"></paper-input>
+            <paper-input label="Interface port" value="{{interfaceport}}" class="port"></paper-input>
         </div>
 
         <h2>States:</h2>
-        <template is="dom-repeat" items="{{states}}" as="state" filter="_filter">
-            <paper-material class="horizontal layout center state" on-tap="editDialog">
-                <div class="flex name">
-                    {{state.path}}
+        <template is="dom-repeat" items="{{states}}" as="state">
+            <paper-material class="horizontal layout wrap center state" on-tap="editDialog">
+                <div class="flex-2 path">{{state.path}}</div>
+                <div class="flex-1 horizontal layout">
+                    <div class="flex write">{{state.config.knx_ga_write}}</div>
+                    <div class="flex read">{{state.config.knx_ga_read}}</div>
                 </div>
             </paper-material>
         </template>
 
-        <homecon-edit-dialog id="editDialog" on-save="add">
-            Edit
+        <homecon-edit-dialog id="editDialog" on-save="edit">
+            <h2>{{newPath}}</h2>
+            <paper-input label="write group address" value="{{newConfig.knx_ga_write}}"></paper-input>
+            <paper-input label="read group address" value="{{newConfig.knx_ga_read}}"></paper-input>
+
+            <paper-dropdown-menu label="Data point type">
+                <paper-menu class="dropdown-content" attr-for-selected="value" selected="{{newConfig.knx_dpt}}">
+                    <paper-item value="">none</paper-item>
+                    <paper-item value="1">1 - boolean</paper-item>
+                    <paper-item value="2">2 - ?</paper-item>
+                    <paper-item value="3">3 - 4 bit</paper-item>
+                    <paper-item value="4.002">4.002 - character set</paper-item>
+                    <paper-item value="5">5 - 1 byte unsigned</paper-item>
+                    <paper-item value="5.001">5.001 - 1 byte unsigned</paper-item>
+                    <paper-item value="6">6 - 1 byte signed</paper-item>
+                    <paper-item value="7">7 - 2 bytes unsigned</paper-item>
+                    <paper-item value="8">8 - 2 bytes signed</paper-item>
+                    <paper-item value="9">9 - 2 bytes floating point number</paper-item>
+                    <paper-item value="10">10 - time</paper-item>
+                    <paper-item value="11">11 - date</paper-item>
+                </paper-menu>
+            </paper-dropdown-menu>
+
         </homecon-edit-dialog>
 
     </template>
@@ -76,24 +111,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         Polymer({
             is: 'knx-settings',
 
+            behaviors: [configUtilsBehavior],
+
             properties: {
             },
 
-
             editDialog: function(e){
-                console.log(e);
                 state = e.model.__data__.state;
 
-                this.newPath = '';
-
+                this.newPath = state.path;
+                this.newConfig = this._configToNewConfig(state.config);
                 this.$.editDialog.open()
             },
 
             edit: function(e){
                 this.$.editDialog.close();
-
-                //this.$.websocket.send({'event':'','path':''});
-        
+                config = this._newConfigToConfig(this.newConfig)
+                this.$.websocket.send({'event':'edit_state','path':this.newPath,'config':config});
             },
 
             delete: function(e){
@@ -114,15 +148,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             reload: function(){
                 this.states = window.app.states;
             },
-            
-            _filter: function(state){
-                for(var i=0; i<state.config.length; i++){
-                    if( state.config[i].key == 'knx_write' ){
-                        return true;
-                    }
-                }
-                return false;
-            }
+
         });
     </script>
 
